--- a/package.json
+++ b/package.json
@@ -4,31 +4,30 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon bin/www",
-    "start-admin": "node ./bin/admin_www",
-    "dev-admin": "nodemon ./bin/admin_www"
+    "dev": "nodemon bin/www"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.1",
-    "compression": "^1.7.4",
+    "bcrypt": "~5.0.1",
+    "body-parser": "~1.19.1",
+    "busboy": "~1.6.0",
+    "compression": "~1.7.4",
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
+    "cors": "~2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
+    "dotenv": "~10.0.0",
     "express": "~4.16.1",
-    "googleapis": "^99.0.0",
+    "googleapis": "~99.0.0",
     "http-errors": "~1.6.3",
-    "mongodb": "^4.2.2",
-    "mongoose": "^6.1.4",
+    "mongodb": "~4.2.2",
+    "mongoose": "~6.1.4",
     "morgan": "~1.9.1",
-    "multer": "^1.4.4",
-    "njwt": "^1.2.0",
-    "nodemailer": "^6.7.2",
-    "secure-random": "^1.1.2",
-    "serve": "^13.0.2",
-    "socket.io": "^4.4.1",
-    "stripe": "^8.197.0",
-    "stripe-cli": "^0.1.0"
+    "multer": "~1.4.4-lts.1",
+    "njwt": "~1.2.0",
+    "nodemailer": "~6.7.2",
+    "secure-random": "~1.1.2",
+    "serve": "~13.0.2",
+    "socket.io": "~4.4.1",
+    "stripe": "~8.197.0",
+    "stripe-cli": "~0.1.0"
   }
 }
